@@ -1,5 +1,10 @@
 2010-07-06  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Components/PathBar.cs: fixed multi monitor
+	  support.
+
+2010-07-06  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Components/PathBar.cs: Path bar now supports a
 	  right hand side.
 
